Translate: Prevent reference URLs from overflowing.
Fixes #4639.

git-svn-id: https://meta.svn.wordpress.org/sites/trunk@9558 74240141-8908-4e6f-9713-ba540dce6ec7

--- a/wordpress.org/public_html/wp-content/plugins/wporg-gp-customizations/templates/style.css
+++ b/wordpress.org/public_html/wp-content/plugins/wporg-gp-customizations/templates/style.css
@@ -2406,6 +2406,11 @@ table.translations tbody > tr:last-child .panel-header-actions__next {
 	margin-top: 5px;
 }
 
+.source-details__references {
+	word-wrap: break-word;
+	overflow-wrap: break-word;
+}
+
 .translation-wrapper {
 	padding: 0 10px;
 	margin: 15px 0;
